--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,50 @@
+
+.App::before {
+  content: '';
+  background: url('assets/farm.webp') no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.box {
+  width: 25%;
+  height: 250px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  border-radius: 12px;
+  background-color: rgba(255,255,255, 0.2);
+  overflow: hidden;
+}
+
+img{
+  height: 30px;
+  width: 42px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.App .last {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(255,255,255, 0.2);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +57,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  text-align:center;
 }
